--- a/220720/index.html
+++ b/220720/index.html
@@ -23,7 +23,7 @@
   </div>
   <!--カルーセル終わり-->
   <!--PC本文-->
-  <div class="container d-none d-md-block">
+  <div class="container">
     <p class="mt-5 font-weight-bold">最終更新日:2022/07/20</p>
     <!--導入文-->
     <p class="m-5">毎月の携帯代、ぶっちゃけ高くないですか？そんなあなたに！格安simをおすすめします！</p>
@@ -32,6 +32,7 @@
     <!--導入文終わり-->
     <div class="border-bottom m-5"></div>
     <!--MVNO,格安sim説明-->
+    <div class="d-none d-md-block">
     <div class="dropdown mb-3">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         格安simって何？
@@ -51,6 +52,32 @@
         <p class="dropdown-item">反対に回線を借りて通信サービスを提供している事業者をMVNOといいます。</p>
       </div>
     </div>
+    </div>
+    <div class="d-block d-md-none">
+    <div class="dropdown mb-3">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        格安simって何？
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
+        <p class="dropdown-item">大手携帯会社主なプランよりも格安の料金で</p>
+        <p class="dropdown-item">利用できる携帯電話サービスのことです。</p>
+      </div>
+    </div>
+    <div class="dropdown">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        MNOって何？
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink4">
+        <p class="dropdown-item">ドコモ・au・ソフトバンク・楽天のこと。</p>
+        <p class="dropdown-item">自社で基地局を設置し、通信サービスを提供</p>
+        <p class="dropdown-item">しています。</p>
+        <p class="dropdown-item">反対に回線を借りて通信サービスを提供している</p>
+        <p class="dropdown-item">事業者をMVNOといいます。</p>
+      </div>
+    </div>
+    </div>
     <!--MVNO,格安sim説明終わり-->
     <div class="border-bottom m-5"></div>
     <!--格安sim紹介はじめ-->
@@ -61,7 +88,7 @@
       <p class="m-3">一回線だけ契約する人やネットでの契約に抵抗がない人におすすめ！</p>
       <p class="m-3">次の3ブランドは店舗での対応は一切してもらえず、オンライン限定なので注意！</p>
       <p class="m-3">店舗で対応してもらえないと不安って人は飛ばしてサブブランドの検討をしよう！</p>
-    <div class="card" style="width: 45rem">
+    <div class="card" style="width: 80%">
       <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
       <div class="card-body">
         <img src="povo2.png" alt="..." class="img-thumbnail">
@@ -74,7 +101,7 @@
     </div>
       <div class="border-bottom m-5"></div>
 
-      <div class="card" style="width: 45rem;">
+      <div class="card" style="width: 80%;">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
         <div class="card-body">
           <img src="linemo1.png" alt="..." class="img-thumbnail">
@@ -86,7 +113,7 @@
         </div>
       </div>
       <div class="border-bottom m-5"></div>
-      <div class="card" style="width: 45rem;">
+      <div class="card" style="width: 80%;">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
         <div class="card-body">
           <img src="ahamo1.png" alt="..." class="img-thumbnail">
@@ -140,7 +167,7 @@
       <p class="m-3">どちらも3G、15G、25Gが用意されているから新キャリアの20Gよりちょっと変えたい時にも！</p>
       <p class="m-3">割引適用前は高額な請求をされるから契約前に割引の適用がされるかしっかり確認しよう！</p>
 
-      <div class="card" style="width: 45rem;">
+      <div class="card" style="width: 80%;">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
         <div class="card-body">
           <img src="UQ1.png" alt="..." class="img-thumbnail">
@@ -156,7 +183,7 @@
         </div>
       <div class="border-bottom m-5"></div>
 
-      <div class="card" style="width: 45rem;">
+      <div class="card" style="width: 80%;">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
         <div class="card-body">
           <img src="ymobile1.png" alt="..." class="img-thumbnail">
@@ -247,7 +274,7 @@
     <p class="m-3">奇跡の1Gまで携帯代無料、通話代もRakutenLinkを利用すれば無料の大盤振る舞い。</p>
     <p class="m-3">今回は1Gまで無料が10月31日で終了してしまうことを受け、番外編となりました…</p>
     <p class="m-3">せめて通信品質が向上すれば楽天ポイントと合わせることで有力な存在になり得たのに…</p>
-    <div class="card" style="width: 45rem;">
+    <div class="card" style="width: 80%;">
       <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
       <div class="card-body">
         <img src="楽天モバイル1.png" alt="..." class="img-thumbnail">
@@ -263,253 +290,6 @@
     </div>
     <!--番外編おわり-->
   </div>
-    <!--PC本文終わり--->
-    <!--スマホ本文-->
-<div class="container d-block d-md-none">
-  <p class="mt-5 font-weight-bold">最終更新日:2022/07/20</p>
-  <!--導入文-->
-  <p class="m-5">毎月の携帯代、ぶっちゃけ高くないですか？そんなあなたに！格安simをおすすめします！</p>
-  <p class="m-5">でも、通信速度が遅いのは…大手キャリア以外は信用できない…と思っていませんか？</p>
-  <p class="m-5">だからこそこの記事では安心して利用できるMNOの格安simを紹介していきます！</p>
-  <!--導入文終わり-->
-  <div class="border-bottom m-5"></div>
-  <!--MVNO,格安sim説明-->
-  <div class="dropdown mb-3">
-    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      格安simって何？
-    </a>
-
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
-      <p class="dropdown-item">大手携帯会社主なプランよりも格安の料金で</p>
-      <p class="dropdown-item">利用できる携帯電話サービスのことです。</p>
-    </div>
-  </div>
-  <div class="dropdown">
-    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      MNOって何？
-    </a>
-
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink4">
-      <p class="dropdown-item">ドコモ・au・ソフトバンク・楽天のこと。</p>
-      <p class="dropdown-item">自社で基地局を設置し、通信サービスを提供</p>
-      <p class="dropdown-item">しています。</p>
-      <p class="dropdown-item">反対に回線を借りて通信サービスを提供している</p>
-      <p class="dropdown-item">事業者をMVNOといいます。</p>
-    </div>
-  </div>
-  <!--MVNO,格安sim説明終わり-->
-  <div class="border-bottom m-5"></div>
-  <!--格安sim紹介はじめ-->
-  <div class="container">
-    <!--povo,ahamo,linemo-->
-    <p class="m-4 h3">新キャリア</p>
-    <p class="m-3">まず初めに、大手3キャリアの新ブランドを紹介！</p>
-    <p class="m-3">独り身の人や自分で契約方法を調べられる人におすすめ！</p>
-    <p class="m-3">次の3ブランドは店舗での対応は一切してもらえず、オンライン限定なので注意！</p>
-    <p class="m-3">店舗で対応してもらえないと不安って人は飛ばしてサブブランドの検討をしよう！</p>
-    <div class="card" style="width: 18rem">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
-      <div class="card-body">
-        <img src="povo2.png" alt="..." class="img-thumbnail">
-        <h5 class="card-title">povo2.0</h5>
-        <p class="card-text">基本料0円で使える最後の料金プラン。</p>
-        <p class="card-text">wifiがある場所だけで使う方や、速度が遅くても大丈夫という人なら0円でも利用可能。</p>
-        <p class="card-text">生活が不規則な人や毎月トッピングをするのが平気な人におすすめ！</p>
-        <a href="https://povo.jp/" class="btn btn-secondary">公式ホームページへ</a>
-      </div>
-    </div>
-    <div class="border-bottom m-5"></div>
-
-    <div class="card" style="width: 18rem;">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
-      <div class="card-body">
-        <img src="linemo1.png" alt="..." class="img-thumbnail">
-        <h5 class="card-title">LINEMO</h5>
-        <p class="card-text">LINEをギガフリーで使えるプラン。</p>
-        <p class="card-text">3Gと20Gから選ぶことができ、ややこしい設定はいらない。</p>
-        <p class="card-text">外で頻繁にLINEを使う人、料金プランのみで安くしたい人におすすめ！</p>
-        <a href="https://www.linemo.jp/" class="btn btn-secondary">公式ホームページへ</a>
-      </div>
-    </div>
-    <div class="border-bottom m-5"></div>
-    <div class="card" style="width: 18rem;">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
-      <div class="card-body">
-        <img src="ahamo1.png" alt="..." class="img-thumbnail">
-        <h5 class="card-title">ahamo</h5>
-        <p class="card-text">国内通話5分かけ放題がついてくるプラン。</p>
-        <p class="card-text">20Gと100Gから選ぶことができ、海外での通信にも対応。</p>
-        <p class="card-text">仕事での通話が多い人、大容量を安く使いたい人におすすめ！</p>
-        <a href="https://ahamo.com/" class="btn btn-secondary">公式ホームページへ</a>
-      </div>
-    </div>
-    <div class="border-bottom m-5"></div>
-    <table class="table">
-      <thead>
-      <tr>
-        <th scope="col">おすすめ順</th>
-        <th scope="col">キャリア名</th>
-        <th scope="col">携帯会社名</th>
-        <th scope="col">料金</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>LIMEMO</td>
-        <td>SoftBank</td>
-        <td>3G:990円,20G:2728円</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>povo</td>
-        <td>au</td>
-        <td>0G:0円~,3G:990円~,20G:2163円~2700円</td>
-
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>ahamo</td>
-        <td>docomo</td>
-        <td>20G:2970円,100G:4950円</td>
-
-      </tr>
-      </tbody>
-    </table>
-    <!--povo,ahamo,linemoおわり-->
-    <div class="border-bottom m-5"></div>
-    <!--UQ,Yモバイルはじめ-->
-    <p class="m-4 h3">サブブランド</p>
-    <p class="m-3">続いて、auとSoftBankのサブブランドを紹介！</p>
-    <p class="m-3">こちらは従来のau,SoftBankの店舗でも対応してもらえるので、トラブル時も安心ですね。</p>
-    <p class="m-3">家族での契約やデータ繰り越しで使わなかった次の月に贅沢に使いたい人におすすめ！</p>
-    <p class="m-3">どちらも3G、15G、25Gが用意されているから新キャリアの20Gよりちょっと変えたい時にも！</p>
-    <p class="m-3">割引適用前は高額な請求をされるから契約前に割引の適用がされるかしっかり確認しよう！</p>
-
-    <div class="card" style="width: 18rem;">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
-      <div class="card-body">
-        <img src="UQ1.png" alt="..." class="img-thumbnail">
-        <h5 class="card-title">UQmobile</h5>
-        <p class="card-text">自宅セット割を適用すれば低額で使えるプラン。</p>
-        <p class="card-text">・auでんきの契約で適用のでんきコース(おすすめ)</p>
-        <p class="card-text">・インターネット+固定電話、ケーブルテレビ、ポケットwifi、ホームルーターのいずれか契約で適用のインターネットコース(これに当てはまるものを契約してる人はすぐ解約するのが吉)</p>
-        <p class="card-text">でんきコースは電気代を携帯代とまとめて払えるから毎月の支払いも楽に！</p>
-        <p class="card-text">新電力をまだどことも契約していなくてギガ数もピッタリな人におすすめ！</p>
-        <p class="card-text"></p>
-        <a href="https://www.uqwimax.jp/mobile/newplan/" class="btn btn-secondary">公式ホームページへ</a>
-      </div>
-    </div>
-    <div class="border-bottom m-5"></div>
-
-    <div class="card" style="width: 18rem;">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
-      <div class="card-body">
-        <img src="ymobile1.png" alt="..." class="img-thumbnail">
-        <h5 class="card-title">Y!mobile</h5>
-        <p class="card-text">家族で入れば2回線目から低額で使えるプラン。</p>
-        <p class="card-text">家族でも1人でも1回線目は高額なままな点に注意！</p>
-        <p class="card-text">SoftBank光を契約している人は1回線目から割引が適用！</p>
-        <p class="card-text">SoftBank Airでも割引は適用されるがそんなものは今すぐ解約しよう！</p>
-        <p class="card-text">SoftBank光を既に利用している人におすすめ！</p>
-        <p class="card-text"></p>
-        <a href="https://www.ymobile.jp/plan/smartphone/" class="btn btn-secondary">公式ホームページへ</a>
-      </div>
-    </div>
-    <div class="border-bottom m-5"></div>
-
-    <table class="table">
-      <thead>
-      <tr>
-        <th scope="col">おすすめ順</th>
-        <th scope="col">ブランド名</th>
-        <th scope="col">携帯会社名</th>
-        <th scope="col">割引適用条件</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>UQmobile</td>
-        <td>au</td>
-        <td>電力会社をau電気に変更</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Y!mobile</td>
-        <td>SoftBank</td>
-        <td>SoftBank光の利用</td>
-      </tr>
-      </tbody>
-    </table>
-    <div class="border-bottom m-5"></div>
-    <!--UQ,Yモバイル終わり-->
-  </div>
-  <!--格安sim紹介おわり-->
-  <!--最終評価はじめ-->
-  <p class="h3 m-4">最終評価</p>
-  <p class="m-3">最後にこれまで紹介してきた中から4つの利用パターンに合わせたおすすめのプランを紹介します！</p>
-  <table class="table">
-    <thead>
-    <tr>
-      <th scope="col"></th>
-      <th scope="col">どんな人におすすめか</th>
-      <th scope="col">どのプランか</th>
-      <th scope="col">おすすめの理由</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th scope="row"></th>
-      <td>とにかく楽に安く使いたい人</td>
-      <td><a href="https://www.uqwimax.jp/mobile/newplan/">UQmobile</a></td>
-      <td>割引適用条件であるauでんき契約で通信費が安くなって電気代を支払う手間もなくなるため</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td>余計なことをせずに安く使いたい人</td>
-      <td><a href="https://www.linemo.jp/">LINEMO</a></td>
-      <td>割引適用条件を満たすことやギガを買うことをしなくても低額で利用することができるため</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td>常に最適なデータ量で生活したい人</td>
-      <td><a href="https://povo.jp/">pobo2.0</a></td>
-      <td>その月の自分の生活スタイルに合わせて最適なデータ量を購入することができるため</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td>大容量を安く使いたい人</td>
-      <td><a href="https://ahamo.com/">ahamo</a></td>
-      <td>新キャリア、サブブランドの中で唯一100Gという大容量が用意されているため</td>
-    </tr>
-    </tbody>
-  </table>
-  <div class="border-bottom m-5"></div>
-  <!--最終評価おわり-->
-  <!--番外編はじめ-->
-  <p class="m-4 h3">番外編</p>
-  <p class="m-3">過去の最強(都心では)楽天モバイルについても紹介します。</p>
-  <p class="m-3">奇跡の1Gまで携帯代無料、通話代もRakutenLinkを利用すれば無料の大盤振る舞い。</p>
-  <p class="m-3">今回は1Gまで無料が10月31日で終了してしまうことを受け、番外編となりました…</p>
-  <p class="m-3">せめて通信品質が向上すれば楽天ポイントと合わせることで有力な存在になり得たのに…</p>
-  <div class="card" style="width: 18rem">
-    <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
-    <div class="card-body">
-      <img src="楽天モバイル1.png" alt="..." class="img-thumbnail">
-      <h5 class="card-title">楽天モバイル</h5>
-      <p class="card-text">10月31日までは1Gまで通信費無料の神プラン。</p>
-      <p class="card-text">それ以降は~3G、~20G、20G~無制限の段階性プラン。</p>
-      <p class="card-text">エントリー不要で楽天SPUが最大3.5%UP！</p>
-      <p class="card-text">20G以上つかう人ならその後は何G使っても料金が変わらないのがポイント！</p>
-      <p class="card-text">楽天経済圏にどっぷりと浸かっている人、20Gを優に超えて使用する人におすすめ！</p>
-      <p class="card-text"></p>
-      <a href="https://network.mobile.rakuten.co.jp/fee/un-limit/?l-id=top_un-limit-banner_fee_unlimit" class="btn btn-secondary">公式ホームページへ</a>
-    </div>
-  </div>
-  <!--番外編おわり-->
-</div>
-    <!--スマホ本文終わり-->
 
   <!--フッターはじめ-->
   <div class="container-fluid">
